apps/portals/aggregator/entrypoints/ssg/provisioning/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aggregator
  labels:
    name: aggregator
    app.kubernetes.io/name: aggregator
    app.kubernetes.io/component: frontend
