apps/portals/aggregator/entrypoints/ssg/provisioning/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregator-ssg-service
  namespace: aggregator
  labels:
    app: aggregator-ssg
    app.kubernetes.io/name: aggregator-ssg
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: aggregator-ssg
